--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -653,7 +653,7 @@
                                         </stop>
                                     </linearGradient>
                                 </defs>
-                                <polygon fill='url(#gradient-fill'
+                                <polygon fill='url(#gradient-fill)'
                                     points="58.67 0.5 18.67 0.5 6.67 40.5 0.67 60.5 16.67 60.5 4.67 100.5 32.67 60.5 46.67 40.5 30.67 40.5 58.67 0.5"
                                     style="stroke:none;stroke-miterlimit:10" />
                             </svg>
